# open-location-hub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  justfile  sqlc.yaml
.github/workflows/: ci.yml  docker-publish.yml
benchmark-artifacts/: replay-1hz-start-2026-04-08.txt  replay-end-2026-04-08.txt  replay-start-2026-04-08.txt
cmd/hub/: main.go  main_test.go
config/auth/: permissions.yaml
connectors/: README.md
connectors/gtfs/: .env.example  README.md  connector.py  connector_mqtt.py  gtfs_support.py  hub_client.py  pyproject.toml  start_demo.sh  station_polygons.py  stop_demo.sh
connectors/gtfs/scripts/: check_geofence_alignment.py  log_collision_events.py  log_fence_events.py  log_locations.py  ws_ndjson_logger.py
connectors/local-hub/: README.md  bootstrap_signoz_dashboards.py  demo-compose.yml  demo.env.example  (+2 more)
docs/: architecture.md  auth.md  configuration.md  connectors-mqtt.md  connectors-websocket.md  connectors.md  getting-started.md  implementation-plan.md  index.md  openapi-governance.md  rpc.md  testing.md
engineering/: analytics-project-plan.md  federation-plan.md  implementation-plan.md  index.md  openapi-governance.md  testing.md
local-hub/: README.md  demo-compose.yml  demo.env.example  fetch_demo_token.sh  start_demo.sh  stop_demo.sh
migrations/: 00001_initial.sql  00002_hub_metadata.sql
queries/: core.sql  hub_metadata.sql
scripts/: check_fence_alignment.py  log_collision_events.py  log_fence_events.py  log_locations.py  pyproject.toml  ws_ndjson_logger.py
(+129 files in other folders)
